Smooth the masks

--- a/join_close_ends.ipynb
+++ b/join_close_ends.ipynb
@@ -8,11 +8,13 @@
    "outputs": [],
    "source": [
     "from pathlib import Path\n",
+    "import pickle\n",
     "\n",
     "from typing import Any\n",
     "from topostats.io import LoadScans\n",
     "from topostats.plottingfuncs import Colormap\n",
     "from topostats.utils import convolve_skeleton\n",
+    "from topostats.mask_manipulation import smooth_mask\n",
     "\n",
     "import numpy as np\n",
     "import numpy.typing as npt\n",
@@ -45,9 +47,52 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dir_raw_data = Path(\"/Users/sylvi/topo_data/connect-loose-ends/data\")\n",
-    "loaded_files = load_data(dir_raw_data)\n",
-    "print(f\"Loaded {len(loaded_files)} files from {dir_raw_data}\")"
+    "dir_mid_process_files = Path(\"/Users/sylvi/topo_data/connect-loose-ends/mid-topostats-processing-data-files\")\n",
+    "files = list(dir_mid_process_files.glob(\"*.pkl\"))\n",
+    "loaded_files: dict[str, dict] = {}\n",
+    "for file in files:\n",
+    "    with open(file, \"rb\") as f:\n",
+    "        loaded_file = pickle.load(f)\n",
+    "        filename = loaded_file[\"filename\"]\n",
+    "        loaded_files[filename] = loaded_file"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0fcbe6f4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for filename, file_data in loaded_files.items():\n",
+    "\n",
+    "    # Let's focus on this one file for now.\n",
+    "    if filename != \"20251031_nicked_picoz_8ng_nicl.0_00062\":\n",
+    "        continue\n",
+    "\n",
+    "    print(f\"processing file: {filename}\")\n",
+    "    p2nm = file_data[\"pixel_to_nm_scaling\"]\n",
+    "    tensor = file_data[\"full_mask_tensor\"]\n",
+    "    image = file_data[\"image\"]\n",
+    "\n",
+    "    channel_to_connect_ends = 1  # use the DNA channel for connecting loose ends.\n",
+    "\n",
+    "    mask = tensor[:, :, channel_to_connect_ends].astype(bool)\n",
+    "    plt.imshow(mask, cmap=\"gray\")\n",
+    "    plt.title(\"Original mask\")\n",
+    "    plt.show()\n",
+    "\n",
+    "    smoothed_mask = smooth_mask(\n",
+    "        filename=filename,\n",
+    "        pixel_to_nm_scaling=p2nm,\n",
+    "        grain=mask,\n",
+    "        gaussian_sigma=2,\n",
+    "        holearea_min_max=(0, None),\n",
+    "        dilation_iterations=2,\n",
+    "    )\n",
+    "    plt.imshow(smoothed_mask, cmap=\"gray\")\n",
+    "    plt.title(\"Smoothed mask\")\n",
+    "    plt.show()\n"
    ]
   },
   {
@@ -92,7 +137,7 @@
     "                distance = np.linalg.norm((endpoint_1 - endpoint_2) * p2nm)\n",
     "                endpoint_pair_distances.append((endpoint_1, endpoint_2, distance))\n",
     "        # Sort by distance\n",
-    "        endpoint_pair_distances.sort(key=lambda data: data[2]) # sort by distance\n",
+    "        endpoint_pair_distances.sort(key=lambda data: data[2])  # sort by distance\n",
     "        print(\"Endpoint pair distances (nm):\")\n",
     "        for endpoint_1, endpoint_2, distance in endpoint_pair_distances:\n",
     "            print(f\"  Distance: {distance:.2f} nm between {endpoint_1} and {endpoint_2}\")\n",
