Pathfind between the two endpoints using route_through_array

--- a/join_close_ends.ipynb
+++ b/join_close_ends.ipynb
@@ -61,6 +61,39 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "c56e9b36",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def keep_only_nonrepeated_endpoints(\n",
+    "    potential_pairs: list[list[list[int, int], list[int, int], float]],\n",
+    ") -> list[list[list[int, int], list[int, int], float]]:\n",
+    "\n",
+    "    used_endpoints: list[tuple[int, int]] = []\n",
+    "    for potential_pair in potential_pairs:\n",
+    "        endpoint_1, endpoint_2, distance_nm = potential_pair\n",
+    "        used_endpoints.append((endpoint_1[0], endpoint_1[1]))\n",
+    "        used_endpoints.append((endpoint_2[0], endpoint_2[1]))\n",
+    "\n",
+    "    repeated_endpoints = set([ep for ep in used_endpoints if used_endpoints.count(ep) > 1])\n",
+    "\n",
+    "    pairs_no_repeated_ends: list[list[list[int, int], list[int, int], float]] = []\n",
+    "    for potential_pair in potential_pairs:\n",
+    "        endpoint_1, endpoint_2, distance_nm = potential_pair\n",
+    "        if (endpoint_1[0], endpoint_1[1]) not in repeated_endpoints and (\n",
+    "            endpoint_2[0],\n",
+    "            endpoint_2[1],\n",
+    "        ) not in repeated_endpoints:\n",
+    "            pairs_no_repeated_ends.append(potential_pair)\n",
+    "        else:\n",
+    "            print(f\"excluding pair {endpoint_1}, {endpoint_2} due to repeated endpoints\")\n",
+    "\n",
+    "    return pairs_no_repeated_ends"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "0fcbe6f4",
    "metadata": {},
    "outputs": [],
@@ -70,7 +103,9 @@
     "skeletonisation_mask_smoothing_gaussian_sigma = 2\n",
     "skeletonisation_method = \"topostats\"\n",
     "skeletonisation_height_bias = 0.6\n",
-    "endpoint_connectio_distance_nm = 10\n",
+    "endpoint_connection_distance_nm = 10\n",
+    "endpoint_connection_cost_map_height_maximum = 3.0\n",
+    "\n",
     "\n",
     "for filename, file_data in loaded_files.items():\n",
     "\n",
@@ -139,64 +174,88 @@
     "            if i >= j:\n",
     "                continue  # avoid double counting\n",
     "            distance_nm = np.linalg.norm((endpoint_1 - endpoint_2) * p2nm)\n",
-    "            if distance_nm <= endpoint_connectio_distance_nm:\n",
+    "            if distance_nm <= endpoint_connection_distance_nm:\n",
     "                potential_pairs.append(((endpoint_1), (endpoint_2), distance_nm))\n",
     "\n",
     "    # for now, for simplicity, let's delete any pairs that are involved in other pairs.\n",
     "    # Construct a list of all endpoints involved in pairs\n",
-    "    "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "6e6904bd",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "potential_pairs: list[list[list[int, int], list[int, int], float]] = [\n",
-    "    [[10, 20], [15, 25], 7.07], # repeated [15, 25]\n",
-    "    [[30, 40], [35, 45], 5.0], # repeated [30, 40]\n",
-    "    [[15, 25], [50, 60], 40.0], # repeated [15, 25]\n",
-    "    [[70, 80], [75, 85], 21.5], # unique\n",
-    "    [[30, 40], [71, 81], 56.57], # repeated [30, 40]\n",
-    "    [[10, 21], [16, 25], 7.81], # unique\n",
-    "]\n",
+    "    potential_pairs_no_repeated_endpoints = keep_only_nonrepeated_endpoints(potential_pairs)\n",
+    "    print(\"pairs to connect:\")\n",
+    "    for pair in potential_pairs_no_repeated_endpoints:\n",
+    "        print(pair)\n",
+    "\n",
+    "    for pair in potential_pairs_no_repeated_endpoints:\n",
+    "        endpoint_1, endpoint_2, distance_nm = pair\n",
+    "\n",
+    "        # Connect the pair.\n",
+    "\n",
+    "        # try using height biased pathfinding between the two endpoints?\n",
+    "        # create a weight cost map from the image, where 0 is the maximum cost, and the lowest cost is configurable.\n",
+    "        # first create a crop around the two endpoints to speed up pathfinding\n",
+    "        cost_map_bbox_padding_px = 10\n",
+    "        min_y = max(0, min(endpoint_1[0], endpoint_2[0]) - cost_map_bbox_padding_px)\n",
+    "        max_y = min(image.shape[0], max(endpoint_1[0], endpoint_2[0]) + cost_map_bbox_padding_px)\n",
+    "        min_x = max(0, min(endpoint_1[1], endpoint_2[1]) - cost_map_bbox_padding_px)\n",
+    "        max_x = min(image.shape[1], max(endpoint_1[1], endpoint_2[1]) + cost_map_bbox_padding_px)\n",
+    "        cost_map = image[min_y:max_y, min_x:max_x]\n",
+    "        local_endpoint_1 = (endpoint_1[0] - min_y, endpoint_1[1] - min_x)\n",
+    "        local_endpoint_2 = (endpoint_2[0] - min_y, endpoint_2[1] - min_x)\n",
+    "        # clip it to the height bounds\n",
+    "        cost_map = np.clip(\n",
+    "            cost_map,\n",
+    "            a_min=0,\n",
+    "            a_max=endpoint_connection_cost_map_height_maximum,\n",
+    "        )\n",
+    "        # invert it\n",
+    "        cost_map = endpoint_connection_cost_map_height_maximum - cost_map\n",
+    "        # normalise to 0-1\n",
+    "        cost_map = cost_map / endpoint_connection_cost_map_height_maximum\n",
+    "        # plt.imshow(cost_map, cmap=\"Greys\", vmin=0, vmax=1)\n",
+    "        # plt.scatter(\n",
+    "        #     [local_endpoint_1[1], local_endpoint_2[1]],\n",
+    "        #     [local_endpoint_1[0], local_endpoint_2[0]],\n",
+    "        #     color=\"red\",\n",
+    "        #     s=100,\n",
+    "        # )\n",
+    "        # plt.title(\"cost map for connecting endpoints\")\n",
+    "        # plt.show()\n",
+    "\n",
+    "        # find the lowest cost path between the two endpoints\n",
+    "        from skimage.graph import route_through_array\n",
+    "        path, cost = route_through_array(\n",
+    "            cost_map,\n",
+    "            start=local_endpoint_1,\n",
+    "            end=local_endpoint_2,\n",
+    "            fully_connected=True, # allow diagonal moves\n",
+    "        )\n",
+    "        print(f\"connecting endpoints {endpoint_1} and {endpoint_2} with cost {cost}\")\n",
+    "\n",
+    "        # plot the path on the cost map\n",
+    "        plt.imshow(cost_map, cmap=\"Greys\", vmin=0, vmax=1)\n",
+    "        path_y = [p[0] for p in path]\n",
+    "        path_x = [p[1] for p in path]\n",
+    "        plt.plot(path_x, path_y, color=\"red\")\n",
+    "        plt.scatter(\n",
+    "            [local_endpoint_1[1], local_endpoint_2[1]],\n",
+    "            [local_endpoint_1[0], local_endpoint_2[0]],\n",
+    "            color=\"blue\",\n",
+    "            s=100,\n",
+    "        )\n",
+    "        plt.title(\"path to connect endpoints\")\n",
+    "        plt.show()\n",
+    "\n",
+    "        for y, x in path:\n",
+    "            skeleton[y + min_y, x + min_x] = True\n",
     "\n",
     "\n",
-    "def keep_only_nonrepeated_endpoints(\n",
-    "    potential_pairs: list[list[list[int, int], list[int, int], float]],\n",
-    ") -> list[list[list[int, int], list[int, int], float]]:\n",
-    "\n",
-    "    used_endpoints: list[tuple[int, int]] = []\n",
-    "    for potential_pair in potential_pairs:\n",
-    "        endpoint_1, endpoint_2, distance_nm = potential_pair\n",
-    "        used_endpoints.append((endpoint_1[0], endpoint_1[1]))\n",
-    "        used_endpoints.append((endpoint_2[0], endpoint_2[1]))\n",
-    "\n",
-    "    repeated_endpoints = set([ep for ep in used_endpoints if used_endpoints.count(ep) > 1])\n",
-    "\n",
-    "    print(\"repeated endpoints:\")\n",
-    "    print(repeated_endpoints)\n",
-    "\n",
-    "\n",
-    "    pairs_no_repeated_ends: list[list[list[int, int], list[int, int], float]] = []\n",
-    "    for potential_pair in potential_pairs:\n",
-    "        endpoint_1, endpoint_2, distance_nm = potential_pair\n",
-    "        if (endpoint_1[0], endpoint_1[1]) not in repeated_endpoints and (\n",
-    "            endpoint_2[0],\n",
-    "            endpoint_2[1],\n",
-    "        ) not in repeated_endpoints:\n",
-    "            pairs_no_repeated_ends.append(potential_pair)\n",
-    "        else:\n",
-    "            print(f\"excluding pair {endpoint_1}, {endpoint_2} due to repeated endpoints\")\n",
-    "\n",
-    "    return pairs_no_repeated_ends\n",
-    "\n",
-    "pairs_to_connect = keep_only_nonrepeated_endpoints(potential_pairs)\n",
-    "print(\"pairs to connect:\")\n",
-    "for pair in pairs_to_connect:\n",
-    "    print(pair)"
+    "    fig, ax = plt.subplots(figsize=(15, 15))\n",
+    "    plt.imshow(image, cmap=cmap, vmin=vmin, vmax=vmax)\n",
+    "    grain_mask_mask = np.ma.masked_where(~mask, mask)\n",
+    "    plt.imshow(grain_mask_mask, cmap=\"Blues_r\", alpha=0.3)\n",
+    "    skeleton_mask = np.ma.masked_where(~skeleton.astype(bool), skeleton)\n",
+    "    plt.imshow(skeleton_mask, cmap=\"viridis\", alpha=0.7)\n",
+    "    plt.title(\"skeleton after connecting loose ends\")\n",
+    "    plt.show()"
    ]
   }
  ],
