Calculate mean mask width and dilate the connecting path accordingly

--- a/join_close_ends.ipynb
+++ b/join_close_ends.ipynb
@@ -16,6 +16,7 @@
     "from topostats.utils import convolve_skeleton\n",
     "from topostats.mask_manipulation import smooth_mask\n",
     "from topostats.tracing.skeletonize import getSkeleton\n",
+    "from topostats.measure.geometry import calculate_mask_width_with_skeleton\n",
     "\n",
     "import numpy as np\n",
     "import numpy.typing as npt\n",
@@ -147,6 +148,14 @@
     "        height_bias=0.6,\n",
     "    ).get_skeleton()\n",
     "\n",
+    "    # Calculate the mask width along the skeleton for later\n",
+    "    mean_mask_width_nm = calculate_mask_width_with_skeleton(\n",
+    "        mask=smoothed_mask,\n",
+    "        skeleton=skeleton,\n",
+    "        pixel_to_nm_scaling=p2nm,\n",
+    "    )\n",
+    "    mean_mask_width_px = mean_mask_width_nm / p2nm\n",
+    "\n",
     "    # fig, ax = plt.subplots(figsize=(10, 10))\n",
     "    # plt.imshow(skeleton, cmap=\"gray\")\n",
     "    # plt.title(\"skeleton\")\n",
@@ -159,7 +168,7 @@
     "    print(\"endpoints:\")\n",
     "    print(endpoint_coords)\n",
     "\n",
-    "    fig, ax = plt.subplots(figsize=(15, 15))\n",
+    "    fig, ax = plt.subplots(figsize=(20, 20))\n",
     "    plt.imshow(image, cmap=cmap, vmin=vmin, vmax=vmax)\n",
     "    grain_mask_mask = np.ma.masked_where(~mask, mask)\n",
     "    plt.imshow(grain_mask_mask, cmap=\"Blues_r\", alpha=0.3)\n",
@@ -198,6 +207,8 @@
     "        min_x = max(0, min(endpoint_1[1], endpoint_2[1]) - cost_map_bbox_padding_px)\n",
     "        max_x = min(image.shape[1], max(endpoint_1[1], endpoint_2[1]) + cost_map_bbox_padding_px)\n",
     "        cost_map = image[min_y:max_y, min_x:max_x]\n",
+    "        mask_crop = mask[min_y:max_y, min_x:max_x]\n",
+    "        image_crop = image[min_y:max_y, min_x:max_x]\n",
     "        local_endpoint_1 = (endpoint_1[0] - min_y, endpoint_1[1] - min_x)\n",
     "        local_endpoint_2 = (endpoint_2[0] - min_y, endpoint_2[1] - min_x)\n",
     "        # clip it to the height bounds\n",
@@ -210,45 +221,47 @@
     "        cost_map = endpoint_connection_cost_map_height_maximum - cost_map\n",
     "        # normalise to 0-1\n",
     "        cost_map = cost_map / endpoint_connection_cost_map_height_maximum\n",
-    "        # plt.imshow(cost_map, cmap=\"Greys\", vmin=0, vmax=1)\n",
-    "        # plt.scatter(\n",
-    "        #     [local_endpoint_1[1], local_endpoint_2[1]],\n",
-    "        #     [local_endpoint_1[0], local_endpoint_2[0]],\n",
-    "        #     color=\"red\",\n",
-    "        #     s=100,\n",
-    "        # )\n",
-    "        # plt.title(\"cost map for connecting endpoints\")\n",
-    "        # plt.show()\n",
     "\n",
     "        # find the lowest cost path between the two endpoints\n",
     "        from skimage.graph import route_through_array\n",
+    "\n",
     "        path, cost = route_through_array(\n",
     "            cost_map,\n",
     "            start=local_endpoint_1,\n",
     "            end=local_endpoint_2,\n",
-    "            fully_connected=True, # allow diagonal moves\n",
+    "            fully_connected=True,  # allow diagonal moves\n",
     "        )\n",
-    "        print(f\"connecting endpoints {endpoint_1} and {endpoint_2} with cost {cost}\")\n",
     "\n",
-    "        # plot the path on the cost map\n",
-    "        plt.imshow(cost_map, cmap=\"Greys\", vmin=0, vmax=1)\n",
-    "        path_y = [p[0] for p in path]\n",
-    "        path_x = [p[1] for p in path]\n",
-    "        plt.plot(path_x, path_y, color=\"red\")\n",
-    "        plt.scatter(\n",
-    "            [local_endpoint_1[1], local_endpoint_2[1]],\n",
-    "            [local_endpoint_1[0], local_endpoint_2[0]],\n",
-    "            color=\"blue\",\n",
-    "            s=100,\n",
+    "        # Dilate the path to equal the mean mask width in pixels\n",
+    "        from scipy import ndimage\n",
+    "        path_array = np.zeros_like(cost_map, dtype=bool)\n",
+    "        # Set the path to True\n",
+    "        for y, x in path:\n",
+    "            path_array[y, x] = True\n",
+    "        # Calculate the dilation iterations needed to reach the mean mask width\n",
+    "        dilation_radius = int(np.ceil(mean_mask_width_px / 2))\n",
+    "        dilated_path_array = ndimage.binary_dilation(\n",
+    "            path_array,\n",
+    "            iterations=dilation_radius,\n",
     "        )\n",
-    "        plt.title(\"path to connect endpoints\")\n",
+    "\n",
+    "        # Plot\n",
+    "        fig, ax = plt.subplots(figsize=(10, 10))\n",
+    "        plt.imshow(image_crop, cmap=cmap, vmin=vmin, vmax=vmax)\n",
+    "        mask_crop_mask = np.ma.masked_where(~mask_crop, mask_crop)\n",
+    "        plt.imshow(mask_crop_mask, cmap=\"Blues_r\", alpha=0.3)\n",
+    "        skeleton_crop = skeleton[min_y:max_y, min_x:max_x]\n",
+    "        skeleton_mask = np.ma.masked_where(~skeleton_crop.astype(bool), skeleton_crop)\n",
+    "        plt.imshow(skeleton_mask, cmap=\"viridis\", alpha=0.7)\n",
+    "        dilated_path_mask = np.ma.masked_where(~dilated_path_array, dilated_path_array)\n",
+    "        plt.imshow(dilated_path_mask, cmap=\"Reds\", alpha=0.5)\n",
+    "        plt.title(\"Connecting path between endpoints\")\n",
     "        plt.show()\n",
     "\n",
     "        for y, x in path:\n",
     "            skeleton[y + min_y, x + min_x] = True\n",
     "\n",
-    "\n",
-    "    fig, ax = plt.subplots(figsize=(15, 15))\n",
+    "    fig, ax = plt.subplots(figsize=(20, 20))\n",
     "    plt.imshow(image, cmap=cmap, vmin=vmin, vmax=vmax)\n",
     "    grain_mask_mask = np.ma.masked_where(~mask, mask)\n",
     "    plt.imshow(grain_mask_mask, cmap=\"Blues_r\", alpha=0.3)\n",
