Add dilated path to whole mask

--- a/join_close_ends.ipynb
+++ b/join_close_ends.ipynb
@@ -30,7 +30,6 @@
     "\n",
     "def clear_output():\n",
     "    from IPython.display import clear_output as co\n",
-    "\n",
     "    co()\n",
     "\n",
     "\n",
@@ -111,7 +110,10 @@
     "for filename, file_data in loaded_files.items():\n",
     "\n",
     "    # Let's focus on this one file for now.\n",
-    "    if filename != \"20251031_nicked_picoz_8ng_nicl.0_00062\":\n",
+    "    # if filename != \"20251031_nicked_picoz_8ng_nicl.0_00062\":\n",
+    "    #     continue\n",
+    "\n",
+    "    if filename != \"20251031_nicked_picoz_8ng_nicl.0_00083\":\n",
     "        continue\n",
     "\n",
     "    print(f\"processing file: {filename}\")\n",
@@ -186,6 +188,10 @@
     "            if distance_nm <= endpoint_connection_distance_nm:\n",
     "                potential_pairs.append(((endpoint_1), (endpoint_2), distance_nm))\n",
     "\n",
+    "    print(\"potential pairs to connect:\")\n",
+    "    for pair in potential_pairs:\n",
+    "        print(pair)\n",
+    "\n",
     "    # for now, for simplicity, let's delete any pairs that are involved in other pairs.\n",
     "    # Construct a list of all endpoints involved in pairs\n",
     "    potential_pairs_no_repeated_endpoints = keep_only_nonrepeated_endpoints(potential_pairs)\n",
@@ -245,18 +251,10 @@
     "            iterations=dilation_radius,\n",
     "        )\n",
     "\n",
-    "        # Plot\n",
-    "        fig, ax = plt.subplots(figsize=(10, 10))\n",
-    "        plt.imshow(image_crop, cmap=cmap, vmin=vmin, vmax=vmax)\n",
-    "        mask_crop_mask = np.ma.masked_where(~mask_crop, mask_crop)\n",
-    "        plt.imshow(mask_crop_mask, cmap=\"Blues_r\", alpha=0.3)\n",
-    "        skeleton_crop = skeleton[min_y:max_y, min_x:max_x]\n",
-    "        skeleton_mask = np.ma.masked_where(~skeleton_crop.astype(bool), skeleton_crop)\n",
-    "        plt.imshow(skeleton_mask, cmap=\"viridis\", alpha=0.7)\n",
-    "        dilated_path_mask = np.ma.masked_where(~dilated_path_array, dilated_path_array)\n",
-    "        plt.imshow(dilated_path_mask, cmap=\"Reds\", alpha=0.5)\n",
-    "        plt.title(\"Connecting path between endpoints\")\n",
-    "        plt.show()\n",
+    "        # Add the dilated path to the whole mask\n",
+    "        dilated_path_array_global = np.zeros_like(mask, dtype=bool)\n",
+    "        dilated_path_array_global[min_y:max_y, min_x:max_x] = dilated_path_array\n",
+    "        mask = mask | dilated_path_array_global\n",
     "\n",
     "        for y, x in path:\n",
     "            skeleton[y + min_y, x + min_x] = True\n",
